--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Manan Patel</title>
+<head>  <title>Manan Patel</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -72,3 +69,4 @@
 </section>
 </body>
 </html>
+
