--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>  <title>Manan Patel</title>
+<html>
+<head>  
+  <title>Manan Patel</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -44,9 +44,9 @@
   <h2>Contact Me</h2>
   <div class="contact-container">
     <div class="contact-info">
-      <p><b>Email:</b> yashpatel@example.com</p>
+      <p><b>Email:</b> patelv5513@gmail.com</p>
       <p><b>LinkedIn:</b> 
-        <a href="https://www.linkedin.com/in/yash-patel-819417383" target="_blank">
+        <a href="https://www.linkedin.com/in/manan-patel-396448322" target="_blank">
           linkedin.com/in/yash-patel-819417383
         </a>
       </p>
@@ -69,4 +69,5 @@
 </section>
 </body>
 </html>
+
 
