--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <p>
     I am passionate about building creative and impactful projects.  
     Explore my work and get to know me better.
+    <div class="profile-photo">
+    <img src="manan.jpg" alt="Manan Patel" />
+  </div>
   </p>
 </section>
 
@@ -69,6 +72,7 @@
 </section>
 </body>
 </html>
+
 
 
 
