--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<html>
-<head>  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Manan Patel</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -19,10 +22,11 @@
   <p>
     I am passionate about building creative and impactful projects.  
     Explore my work and get to know me better.
-    <div class="profile-photo">
+     <div class="profile-photo">
     <img src="manan.jpg" alt="Manan Patel" />
   </div>
-  </p>
+  </p>  
+ 
 </section>
 
 <section id="aboutme">
@@ -32,6 +36,7 @@
     I enjoy learning new technologies, solving problems.<br>
     I love reading, traveling, coding and writing.
   </p>
+
 </section>
 
 <section id="skills">
@@ -47,10 +52,10 @@
   <h2>Contact Me</h2>
   <div class="contact-container">
     <div class="contact-info">
-      <p><b>Email:</b> patelv5513@gmail.com</p>
+      <p><b>Email:</b> yashpatel@example.com</p>
       <p><b>LinkedIn:</b> 
-        <a href="https://www.linkedin.com/in/manan-patel-396448322" target="_blank">
-          linkedin.com/in/manan-patel-396448322
+        <a href="https://www.linkedin.com/in/yash-patel-819417383" target="_blank">
+          linkedin.com/in/yash-patel-819417383
         </a>
       </p>
     </div>
@@ -72,7 +77,3 @@
 </section>
 </body>
 </html>
-
-
-
-
