--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Manan Patel</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -16,15 +18,18 @@
 </header>
 
 <section id="home">
-  <h2>Hi, I am Manan Patel<br>Welcome to my portfolio!</h2>
-  <p>
-    I am passionate about building creative and impactful projects.  
-    Explore my work and get to know me better.
-     <div class="profile-photo">
-    <img src="manan.jpg" alt="Manan Patel" />
+  <div class="home-container">
+    <div class="home-text">
+      <h2>Hi, I am Manan Patel<br>Welcome to my portfolio!</h2>
+      <p>
+        I am passionate about building creative and impactful projects.  
+        Explore my work and get to know me better.
+      </p>
+    </div>
+    <div class="profile-photo">
+      <img src="manan.jpg" alt="Manan Patel" />
+    </div>
   </div>
-  </p>  
- 
 </section>
 
 <section id="aboutme">
@@ -52,8 +57,8 @@
     <div class="contact-info">
       <p><b>Email:</b> yashpatel@example.com</p>
       <p><b>LinkedIn:</b> 
-        <a href="https://www.linkedin.com/in/yash-patel-819417383" target="_blank">
-          linkedin.com/in/yash-patel-819417383
+        <a href="https://www.linkedin.com/in/manan-patel-396448322/" target="_blank">
+          manan-patel
         </a>
       </p>
     </div>
@@ -75,4 +80,3 @@
 </section>
 </body>
 </html>
-
