--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <h2>Contact Me</h2>
   <div class="contact-container">
     <div class="contact-info">
-      <p><b>Email:</b> yashpatel@example.com</p>
+      <p><b>Email:</b> mananpatel@gmail.com</p>
       <p><b>LinkedIn:</b> 
         <a href="https://www.linkedin.com/in/manan-patel-396448322/" target="_blank">
           manan-patel
@@ -80,3 +80,4 @@
 </section>
 </body>
 </html>
+
